--- a/app/src/main/res/layout/fragment_detail_history.xml
+++ b/app/src/main/res/layout/fragment_detail_history.xml
@@ -66,14 +66,16 @@
             <TextView
                 android:id="@+id/text_transaction_detail"
                 style="@style/h4_bold"
-                android:layout_width="180dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
+                android:layout_marginEnd="12dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="NAMA CUSTOMER"
+                android:text=""
                 android:textAlignment="textStart"
                 android:textColor="@color/g_black"
+                app:layout_constraintEnd_toStartOf="@id/button_lunas"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/button_back"
                 app:layout_constraintTop_toTopOf="parent" />
