--- a/app/src/main/res/layout/detail_history_list_layout.xml
+++ b/app/src/main/res/layout/detail_history_list_layout.xml
@@ -37,6 +37,7 @@
         <TextView
             android:id="@+id/unit_text"
             style="@style/p"
+            android:layout_marginStart="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="pack"
