--- a/app/src/main/res/layout/product_list_layout.xml
+++ b/app/src/main/res/layout/product_list_layout.xml
@@ -18,6 +18,7 @@
             android:id="@+id/product_initial"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/circle_background"
             android:gravity="center"
             android:textColor="@android:color/white"
