--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -51,8 +51,7 @@
             android:layout_height="wrap_content"
             android:text="[Rp200.000.000]"
             android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent
-"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -76,7 +75,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="-16dp"
             android:layout_marginBottom="8dp"
-            android:theme="@style/customSpinner"
             app:layout_constraintBottom_toTopOf="@id/quantityLayout"
             app:layout_constraintEnd_toEndOf="parent" />
 
